--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span> Carl Andrew Castañas </span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span> Aira Merin </span> | all rights reserved! </h1>
 
 </section>
 
