--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>adventure is worthwhile</h3>
+        <h3>JOMALIG</h3>
         <p>dicover new places with us, adventure awaits</p>
         <a href="#" class="btn">discover more</a>
     </div>
