--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
     </div>
 
     <div class="controls">
-        <span class="vid-btn active" data-src="images/vid-1.mp4"></span>
-        <span class="vid-btn" data-src="images/vid-2.mp4"></span>
-        <span class="vid-btn" data-src="images/vid-3.mp4"></span>
-        <span class="vid-btn" data-src="images/vid-4.mp4"></span>
-        <span class="vid-btn" data-src="images/vid-5.mp4"></span>
+        <span class="vid-btn active" data-src="images/vid-1jomalig.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-2jomalig.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-3jomalig.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-4jomalig.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-5jomalig.mp4"></span>
     </div>
 
     <div class="video-container">
