--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/g-1.jpg" alt="">
+            <img src="images/m-1.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -344,7 +344,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-2.jpg" alt="">
+            <img src="images/m-2.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -352,7 +352,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-3.jpg" alt="">
+            <img src="images/m-3.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -360,7 +360,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-4.jpg" alt="">
+            <img src="images/m-4.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -368,7 +368,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-5.jpg" alt="">
+            <img src="images/m-5.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -376,7 +376,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-6.jpg" alt="">
+            <img src="images/m-6.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -384,7 +384,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-7.jpg" alt="">
+            <img src="images/m-7.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -392,7 +392,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-8.jpg" alt="">
+            <img src="images/m-8.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
@@ -400,7 +400,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-9.jpg" alt="">
+            <img src="images/m-9.jpg" alt="">
             <div class="content">
                 <h3>amazing places</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
