--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
             <img src="images/p-1.jpg" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> mumbai </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <p>Camotes is one of Cebu's most famous tourist spots. 
+The prospect of a lengthy weekend escape on an island where nature's
+ unspoilt splendor is constantly on show is alluring.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
