--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         <div class="box">
             <img src="images/p-1.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> mumbai </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Bakhaw Beach </h3>
                 <p>Camotes is one of Cebu's most famous tourist spots. 
-The prospect of a lengthy weekend escape on an island where nature's
- unspoilt splendor is constantly on show is alluring.</p>
+                   The prospect of a lengthy weekend escape on an island where nature's
+                   unspoilt splendor is constantly on show is alluring.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -171,7 +171,7 @@ The prospect of a lengthy weekend escape on an island where nature's
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱4,000.00 <span>₱8,000.00</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
@@ -179,8 +179,10 @@ The prospect of a lengthy weekend escape on an island where nature's
         <div class="box">
             <img src="images/p-2.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> hawaii </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <h3> <i class="fas fa-map-marker-alt"></i> Morong Beach </h3>
+                <p>Morong Beach is a popular tourist destination in Batanes for a variety of reasons. 
+                    The sand is much more evenly distributed here than on other beaches in the province. 
+                    The waves are also less fierce, making them suitable for swimming.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -188,7 +190,7 @@ The prospect of a lengthy weekend escape on an island where nature's
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱7,000.00 <span>₱10,000.00</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
@@ -196,8 +198,10 @@ The prospect of a lengthy weekend escape on an island where nature's
         <div class="box">
             <img src="images/p-3.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> sydney </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <h3> <i class="fas fa-map-marker-alt"></i> Alegria Beach </h3>
+                <p>The pristine beach and crystal blue sea at Siargao's Alegria Beach. The beach was lined with coconut palms.  
+                    Only a few locals hung out on the grass behind the beach, as there were no other tourists. 
+                    This beach has a lot of reef, but there is still enough water to swim in, which isn't often the case in Siargao.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -205,7 +209,7 @@ The prospect of a lengthy weekend escape on an island where nature's
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱5,144.59 <span>₱5,686.12</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
@@ -213,8 +217,9 @@ The prospect of a lengthy weekend escape on an island where nature's
         <div class="box">
             <img src="images/p-4.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> paris </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <h3> <i class="fas fa-map-marker-alt"></i> Subic Beach </h3>
+                <p>Subic Beach, in the Sorsogon hamlet of Matnog, is known for its crystal blue seas and pinkish fine sand, 
+                    attracting visitors from all over the country.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -222,7 +227,7 @@ The prospect of a lengthy weekend escape on an island where nature's
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱10,500.00 <span>₱11,551.00</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
@@ -230,8 +235,8 @@ The prospect of a lengthy weekend escape on an island where nature's
         <div class="box">
             <img src="images/p-5.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> tokyo </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <h3> <i class="fas fa-map-marker-alt"></i> Pink Beach </h3>
+                <p>The crushed red organ pipe coral that washes ashore on Santa Cruz Island has resulted in a stunning pink beach.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -239,7 +244,7 @@ The prospect of a lengthy weekend escape on an island where nature's
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱10,100.00 <span>₱11,220.00</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
