--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
         <div class="box">
             <img src="images/p-6.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> eypt </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
+                <h3> <i class="fas fa-map-marker-alt"></i> Banol Beach </h3>
+                <p>Banol Beach is a small stretch of sandy white beach where lunch is usually served on Coron Island Hopping Tours.
+                     A public beach surrounded by a spectacular backdrop of limestone cliffs, similar to the beaches on Coron Island.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -261,7 +262,7 @@
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <div class="price"> $90.00 <span>$120.00</span> </div>
+                <div class="price"> ₱6,500.00 <span>₱8,500.00</span> </div>
                 <a href="#" class="btn">book now</a>
             </div>
         </div>
