--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
                 <h3>Name</h3>
                 <input type="text" placeholder="name of guests">
             </div>
+            <div class="inputBox">
+                <h3>Contact</h3>
+                <input type="tel" placeholder="Contact number of guests">
+            </div>
              <div class="inputBox">
                 <h3>Address</h3>
                 <input type="text" placeholder="address of guests">
