--- a/index.html
+++ b/index.html
@@ -305,22 +305,24 @@
         <div class="box">
             <i class="fas fa-hotel"></i>
             <h3>affordable hotels</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore commodi earum, quis voluptate exercitationem ut minima itaque iusto ipsum corrupti!</p>
+            <p>Hotels that you can stay at night, with the great view that you can relax and chill while loving the nature</p>
         </div>
         <div class="box">
             <i class="fas fa-utensils"></i>
             <h3>food and drinks</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore commodi earum, quis voluptate exercitationem ut minima itaque iusto ipsum corrupti!</p>
+            <p>Different kind of foods that you can eat, but the main food and drink are seafoods with cocktail soda, to refresh your minds, with your friends and family</p>
         </div>
         <div class="box">
             <i class="fas fa-bullhorn"></i>
-            <h3>safty guide</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore commodi earum, quis voluptate exercitationem ut minima itaque iusto ipsum corrupti!</p>
+            <h3>safety guide</h3>
+            <p>Be sure to look up the emergency services number for your destination, even before you get there. It's also a good idea to look up the number for your country's nearest embassy before you leave. Write them down or save them in your phone so you'll have quick access to them in the event of an emergency. 
+               Any solid resource of travel safety information will tell you that it's never a good idea to carry huge amounts of cash. Instead, open an account with an international bank or credit card company so you can use local ATMs. If you absolutely must withdraw large amounts of cash at once, leave the bulk of 
+               it locked up safely in your hotel or hostel and carry only what you'll need for the day. Before you leave let someone know your itinerary, and update them to any changes of plans. Make a habit of checking in with a close friend or family member back home at the end of each day.</p>
         </div>
         <div class="box">
             <i class="fas fa-globe-asia"></i>
             <h3>around the world</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore commodi earum, quis voluptate exercitationem ut minima itaque iusto ipsum corrupti!</p>
+            <p>There are so many beaches around the world but this anonymous beach that can only be seen in Quezon province, it is very rare to see that only few people know this place. let's travel to this place!  </p>
         </div>
         <div class="box">
             <i class="fas fa-plane"></i>
